prepare cors configuration for prod